# scholar-agent

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  PROJECT_BASIS.md  RD-new.md  README.md  mkdocs.yml  package-lock.json  pyproject.toml  session-ses_2a73.md
docs/: index.md
docs/LLM-Working/: legacy-v1-summary.md  p1-ssh-executor-smoke-checklist.md  p2-mineru-implementation-plan.md  p2-mineru-smoke-checklist.md  p3-artifact-state-store-impl.md  p3-artifact-state-store-implementation-plan.md  p4-fastapi-service-auth-impl.md  p4-fastapi-service-auth-implementation-plan.md  p5-human-gate-webhook-impl.md  p5-human-gate-webhook-implementation-plan.md  p6-sse-streaming-impl.md  p6-sse-streaming-implementation-plan.md  p7-agent-adapter-task-engine-impl.md  p9-real-runtime-smoke-checklist.md  w1-webui-shell-client-implementation-plan.md  w2-project-run-forms-implementation-plan.md  w3-run-detail-gates-events-implementation-plan.md
docs/ainrf/: index.md
docs/framework/: agent-capability-base.md  ai-native-research-framework.md  artifact-graph-architecture.md  container-workspace-protocol.md  index.md  pia-rfc.md  reference-mapping.md  v1-dual-mode-research-engine.md  v1-implementation-status.md  v1-rfc.md  v1-roadmap.md  vsa-rfc.md  (+3 more)
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts  vite.proxy.ts  vitest.config.ts
paper-test/: paper.md
prompts/: mode1-discovery-aris.md  mode1-discovery.md  mode2-reproduction-aris.md  mode2-reproduction.md
scripts/: build.sh  build_html_notes.py  install.sh  run_webui.py  serve.sh  webui.sh
test/: SAGDFN_复现报告.md  collect_results.py
tests/: test_api_auth.py  test_api_code.py  test_api_environments.py  test_api_events.py  test_api_health.py  test_api_resources.py  test_api_tasks.py  test_api_terminal.py  test_api_v1_routes.py  test_artifacts_models.py  test_build_html_notes.py  test_claude_code_adapter.py  test_cli.py  test_code_server.py  test_code_server_installer.py  test_events_store.py  test_execution_ssh.py  test_monitor_collectors.py  test_monitor_process_tree.py  test_monitor_service.py  test_parsing_cache.py  test_parsing_mineru.py  test_performance_benchmarks.py  test_run_webui.py  test_runtime_paths.py  test_runtime_readiness.py  test_server.py  test_sessions.py  test_skill_injection_e2e.py  test_state_store.py  test_task_edges.py  test_task_engine.py  test_task_harness_models.py  test_task_harness_prompts.py  test_task_harness_service.py  test_task_manager.py  test_task_runtime.py  test_terminal_pty.py  test_terminal_sessions.py  test_terminal_ttyd.py  (+4 more)
(+429 files in other folders)
